--- a/.project
+++ b/.project
@@ -14,4 +14,16 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Code Critique.pdf</name>
+			<type>1</type>
+			<location>/Users/Leo/Downloads/Code Critique.pdf</location>
+		</link>
+		<link>
+			<name>User Guide.pdf</name>
+			<type>1</type>
+			<location>/Users/Leo/Downloads/User Guide.pdf</location>
+		</link>
+	</linkedResources>
 </projectDescription>
