Just trying to make small changes at a time

--- a/.project
+++ b/.project
@@ -16,14 +16,14 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>Code Critique.pdf</name>
+			<name>DOCUMENTS/Code Critique.pdf</name>
 			<type>1</type>
-			<location>/Users/Leo/Downloads/Code Critique.pdf</location>
+			<location>C:/Users/Savannah/Documents/Code Critique.pdf</location>
 		</link>
 		<link>
-			<name>User Guide.pdf</name>
+			<name>DOCUMENTS/User Guide.pdf</name>
 			<type>1</type>
-			<location>/Users/Leo/Downloads/User Guide.pdf</location>
+			<location>C:/Users/Savannah/Documents/UB 6th semester/CSE 116/User Guide.pdf</location>
 		</link>
 	</linkedResources>
 </projectDescription>
